--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -1,4 +1,5 @@
 <h1><%= @song.name %></h1>
+<% binding.pry %>
 
 <h2>Artist: <%= link_to(@song.artist.name, @song.artist) %></h2>
 <h2>Genre: <%= link_to(@song.genre.name, @song.genre) %></h2>
